# connectionApiRust

./: Cargo.toml
src/: main.rs
src/application/use_cases/: get_instance_identity.rs  mod.rs  uses_env.rs
src/domain/entities/: api_key.rs  machine_key.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/rest_api/: client.rs  mappers.rs  mod.rs  models.rs
