[package]
name = "connectionPriceEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.1.7"
tokio = { version = "1.37", features = ["full"] }
sha2 = "0.10.9"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
rand = { version = "0.9.2", features = ["std", "alloc"] }
hex = "0.4.3"
